working add endpoint

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 
 <h2>Add Attraction</h2>
 <div>
-    <form method="post" action="/">
+    <form method="post" action="/add">
         <div>
             <label for="attrName">Name:</label>
             <input id="attrName" type="text" name="attrName">
@@ -53,19 +53,23 @@
         </div>
         <div>
             <label for="price">Price:</label>
-            <input id="price" type="number" name="price">
+            <input id="price" type="text" name="price">
         </div>
         <div>
             <label for="longitude">Longitude:</label>
-            <input id="longitude" type="number" name="longitude">
+            <input id="longitude" type="text" name="longitude">
         </div>
         <div>
             <label for="latitude">Latitude:</label>
-            <input id="latitude" type="number" name="latitude">
+            <input id="latitude" type="text" name="latitude">
+        </div>
+        <div>
+            <label for="duration">Duration:</label>
+            <input id="duration" type="text" name="duration">
         </div>
         <div>
             <label for="recommendedAge">Recommended age:</label>
-            <input id="recommendedAge" type="number" name="recommendedAge">
+            <input id="recommendedAge" type="text" name="recommendedAge">
         </div>
         <div>
             <label for="category">Category:</label>
