finished edit and some changes in HTML mostlz to fix form display

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,35 +41,35 @@
 <div>
     <form method="post" action="/add">
         <div>
-            <label for="attrName">Name:</label>
+            <label for="attrName">Name:</label><br>
             <input id="attrName" type="text" name="attrName" th:value="${oldName} ? ${oldName} : ''">
         </div>
         <div>
-            <label for="city">City:</label>
+            <label for="city">City:</label><br>
             <input id="city" type="text" name="city" th:value="${oldCity} ? ${oldCity} : ''">
         </div>
         <div>
-            <label for="price">Price:</label>
+            <label for="price">Price:</label><br>
             <input id="price" type="text" name="price" th:value="${oldPrice} ? ${oldPrice} : ''">
         </div>
         <div>
-            <label for="longitude">Longitude:</label>
+            <label for="longitude">Longitude:</label><br>
             <input id="longitude" type="text" name="longitude" th:value="${oldLongitude} ? ${oldLongitude} : ''">
         </div>
         <div>
-            <label for="latitude">Latitude:</label>
+            <label for="latitude">Latitude:</label><br>
             <input id="latitude" type="text" name="latitude" th:value="${oldLatitude} ? ${oldLatitude} : ''">
         </div>
         <div>
-            <label for="duration">Duration:</label>
+            <label for="duration">Duration:</label><br>
             <input id="duration" type="text" name="duration" th:value="${oldDuration} ? ${oldDuration} : ''">
         </div>
         <div>
-            <label for="recommendedAge">Recommended age:</label>
+            <label for="recommendedAge">Recommended age:</label><br>
             <input id="recommendedAge" type="text" name="recommendedAge" th:value="${oldRecommendedAge} ? ${oldRecommendedAge} : ''">
         </div>
         <div>
-            <label for="category">Category:</label>
+            <label for="category">Category:</label><br>
             <input id="category" type="text" name="category" th:value="${oldCategory} ? ${oldCategory} : ''">
         </div>
         <div>
